--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -24,12 +24,12 @@ body {
   color: rgba(0, 0, 0, 0.87);
   margin: 0;
   font-size: 0.875rem;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-family: "Helvetica", "Arial", sans-serif;
   font-weight: 400;
   line-height: 1.43;
   letter-spacing: 0.01071em;
-  color: #536471;
-  background: #181E23;
+  color: #151515;
+  background: #fff;
   .main {
     width: 100%;
     height: 100vh;
