--- a/components/Tabs/index.module.scss
+++ b/components/Tabs/index.module.scss
@@ -1,74 +1,25 @@
 .root {
-  width: 200px;
-  height: 100%;
-  background: #181E23;
-  @media screen and (max-width: 768px) {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 50px;
-    display: flex;
-    background-color: #181E23;
-    justify-content: space-around;
-    align-items: center;
-    backdrop-filter: blur(20px);
-  color: #fff;
-  z-index: 999;
-  // box-shadow: 0 0 30px 10px rgba(0, 0, 0, .3);
-  border-top: 1px solid #2C3338;
-   }
+  width: 400px;
+  height: 72px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .navItem {
-  position: relative;
-  width: 100%;
-  height: 56px;
-  cursor: pointer;
-  text-decoration: none;
-  // background: transparent;
-  transition: background 0.2s;
-  box-sizing: border-box;
-  // font-family: Poppins-Regular;
-  font-size: 16px;
-  color: #A4A4A4;
-  line-height: 56px;
-  text-align: left;
+  font-family: Helvetica-Bold;
+  font-size: 20px;
+  color: #151515;
+  letter-spacing: 0;
+  line-height: 24px;
   font-weight: 400;
-  padding-left: 20px;
-  // display: flex;
-  // justify-content: flex-start;
-  // align-items: center;
-  // opacity: 0.5;
-
-  &:hover {
-    background: #555758;
-  }
-  @media screen and (max-width: 768px) {
-    // background-color: #000;
-    color: #fff;
-    text-align: center;
-    padding-left: 0;
-  }
-  
+  margin: 0 22px;
+  cursor: pointer;
 }
 
 .active {
-  // font-family: Poppins-SemiBold;
-  color: #FFFFFF;
-  font-weight: 600;
-  opacity: 1;
-
-  // &::before {
-  //   position: absolute;
-  //   content: '';
-  //   left: 50%;
-  //   bottom: 0;
-  //   min-width: 34px;
-  //   height: 4px;
-  //   transform: translateX(-50%);
-  //   background: #1D9BF0;
-  //   border-radius: 9999px;
-  // }
+  color: #5C9700;
+  font-weight: 700;
 }
 
 .single {
