1. add the footer component 2. improve home page images

--- a/containers/TopBar/index.module.scss
+++ b/containers/TopBar/index.module.scss
@@ -1,7 +1,7 @@
 .topBar {
   width: 100%;
   background: #fff;
-  border-bottom: 1px solid #acadae;
+  border-bottom: 1px solid #e6e6e6;
 }
 
 .title {
