--- a/components/SaleTime/index.module.scss
+++ b/components/SaleTime/index.module.scss
@@ -11,6 +11,9 @@
       color: #151515;
       text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
       font-weight: 700;
+      @media screen and (max-width: 640px) {
+        font-size: 30px;
+      }
     }
     .itemTxt {
       font-size: 24px;
@@ -18,6 +21,9 @@
       text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
       font-weight: 400;
       margin: 0 12px;
+      @media screen and (max-width: 640px) {
+        font-size: 14px;
+      }
     }
   }
 }
