update home images

--- a/components/SaleTime/index.module.scss
+++ b/components/SaleTime/index.module.scss
@@ -10,6 +10,7 @@
   .item {
     display: flex;
     align-items: center;
+    justify-content: center;
     .itemNum {
       font-size: 48px;
       color: #151515;
