added Preview page

--- a/components/Footer/index.module.scss
+++ b/components/Footer/index.module.scss
@@ -24,7 +24,7 @@
     font-weight: 700;
     // last child padding 0
     &:last-child {
-      margin-right: 0;
+      margin-right: 14px;
     }
     .icon {
       width: 24px;
